<resources>
    <string name="app_name">FlooZManager</string>
    <string name="bienvenu">Bienvenue dans FlooZManager</string>
    <string name="hint">Entrez vos dépenses/gains</string>
    <string name="calc">Calculer</string>
    <string name="textCal">Résultats :</string>
    <string name="textGain">Chiffre d\'affaire :</string>
    <string name="textDep">Dépenses :</string>
    <string name="euro">€</string>
    <string name = "parametres">Paramètres</string>
    <string name = "reset_txt">Réinitialisation des données sauvegardées</string>
    <string name = "reset">Reset</string>
</resources>